# wellplan

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Security.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2023_09_19_2305-ab95cc59ab66_create_user_table.py  2023_09_20_1238-088a9eec40f7_create_type_for_user_usertypeenum.py  2023_09_21_1221-f72628d89bb8_add_doctor_tables.py
app/: email.py  utils.py
app/api/: bearer.py  deps.py  routers.py
app/api/auth/: routes.py
app/api/doctors/: routes.py
app/api/users/: routes.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  user.py
app/models/: __init__.py  base.py  doctor.py  user.py
app/schemas/: __init__.py  doctor.py  token.py  user.py
app/scripts/: create_superuser.py  superuser.py
scripts/: superuser.py
