[tool.poetry]
name = "wellplan"
version = "0.1.0"
description = "WellPlan is a Healthcare Appointment Management System designed to streamline the process of booking, rescheduling, and managing appointments with healthcare providers. This platform aims to modernize the patient experience while also simplifying administrative tasks for medical offices."
authors = ["Vladyslav Ushakov <ushakov.vladyslav.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
flake8-variables-names = "^0.0.6"
flake8-functions = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pre-commit = "^3.4.0"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
